--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,6 @@ jobs:
         uses: whoan/docker-build-with-cache-action@v5
         with:
           registry: ghcr.io
-          image_name: LuukkonenR/singtest
+          image_name: luukkonenr/singtest
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
